# sheerwater-chat

./: .envrc.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
keycloak/: realm.json
src/sheerwater_chat/: __init__.py  auth.py  chat.py  config.py  database.py  main.py  mcp_client.py
src/sheerwater_chat/static/: chat.js  style.css
src/sheerwater_chat/templates/: chat.html  login.html
